page routing updated

--- a/src/App.css
+++ b/src/App.css
@@ -29,12 +29,22 @@ select:-webkit-autofill:focus {
   width: 15%;
   display: inline-block;
   position: relative;
+  margin-left: 10px;
 }
-.App__NavBar{
+.NavBar{
   color: white;
   background-color: rgb(62, 169, 241);
   height: 30px;
   width: inherit;
+  margin: 10px;
+  display: flex;
+}
+.NavBarItem{
+  cursor: pointer;
+  font-size: .9em;
+  display: inline-block;
+  margin: 5px;
+  color: rgb(1, 27, 59);
 }
 .App__SideMeny_Item{
   border: #52C4B9;  
