--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,22 @@ select:-webkit-autofill:focus {
 
 .App {
   height: 100vh;
-  display: flex;
+  background-color: #F9F5E5;
   color: white;
 }
 
+.AddFurnitureButton{
+  background-color: #358254;
+  color: #358254;
+}
+
 .App__Aside {
-  width: 50%;
-  background-color: #66DAC7;
+  position: absolute;
+  left: 20%;
+  width: 60%;
+  background-color: #FAF3DD;
+  vertical-align: inherit;
+  display: inline-block;
 }
 .App__SideMenu{
   color: white;
@@ -37,22 +46,24 @@ select:-webkit-autofill:focus {
   height: 30px;
   width: inherit;
   margin: 10px;
+  justify-content: space-between;
   display: flex;
+  padding-top: 4px;
 }
 .NavBarItem{
   cursor: pointer;
   font-size: .9em;
-  display: inline-block;
   margin: 5px;
   color: rgb(1, 27, 59);
 }
+
 .App__SideMeny_Item{
   border: #52C4B9;  
 }
 .App__InfoContainer{
   margin-left: 10px;
   margin-right: 10px;
-  background-color: #646F7D;
+  background-color: #68B0AB;
   box-sizing: border-box;
   width: 100%; 
 }
@@ -78,10 +89,11 @@ select:-webkit-autofill:focus {
 }
 
 .App__Form {
-  width: 50%;
+  position: absolute;
+  left: 20%;
+  width: 80%;
   background-color: #2E4158;
-  padding: 25px 40px;
-  overflow: auto;
+
 }
 
 .PageSwitch {
@@ -117,6 +129,7 @@ select:-webkit-autofill:focus {
 }
 
 .FormCenter {
+  padding: 25px 40px;
   margin-bottom: 100px;
 }
 
