--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,8 @@ select:-webkit-autofill:focus {
   margin-right: 10px;
   background-color: #68B0AB;
   box-sizing: border-box;
-  width: 100%; 
+  width: 100%;
+  padding-left: 6px; 
 }
 .App__LoggedInfo{
   position: relative;
