--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@ select:-webkit-autofill:focus {
 
 
 .App {
-  height: 100vh;
   background-color: #F9F5E5;
   color: white;
 }
@@ -26,21 +25,24 @@ select:-webkit-autofill:focus {
 
 .App__Aside {
   position: absolute;
-  left: 20%;
-  width: 60%;
+  left: 5%;
+  width: 90%;
   background-color: #FAF3DD;
   vertical-align: inherit;
   display: inline-block;
 }
-.App__SideMenu{
+.DataPage__SideMenuContainer{
   color: white;
-  background-color: #2E4158;
+  background-color: transparent;
   width: 15%;
   display: inline-block;
   position: relative;
   margin-left: 10px;
 }
-.NavBar{
+.DataPage__SideMenu{
+  padding: 1px, 1px, 1px, 1px;
+}
+.DataPage_NavBar{
   color: white;
   background-color: rgb(62, 169, 241);
   height: 30px;
@@ -48,18 +50,65 @@ select:-webkit-autofill:focus {
   margin: 10px;
   justify-content: space-between;
   display: flex;
-  padding-top: 4px;
+  margin-top: 55px;
+  padding: 4px;
+}
+.DataPage_TopContainer{
+  display: flex;
+}
+.DataPage_AccountLogo{
+  height: 48px;
+  width: 48px;
+  background-color: #C8C8C8;
+  margin-top: 30px;
+  margin-right: 10px;
+}
+.DataPage_ButtonContainer{
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 36px;
+  padding-left: 62px;
+  border: 1px dashed blue;
+}
+.DataPage_LogoContainer{
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px dashed red;
+}
+.DataPage_AccountContainer{
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border: 1px dashed green;
+}
+.DataPage_logo{
+  margin-top: 30px;
+  height: 100px;
+  width: 100px;
+  background-color: #BDBDBD;
+}
+.DataPage_NavItem{
+  border-radius: 24px;
+
+}
+.DataPage_NavItem.sc-bdVaJa.kiiitP{
+  padding: 1px 1px 1px 1px;
+}
+.DataPage_NavItem.sc-bdVaJa.bneZnY{
+  padding: 4px 8px 4px 8px;
 }
 .NavBarItem{
   cursor: pointer;
-  font-size: .9em;
   margin: 5px;
   color: rgb(1, 27, 59);
 }
 
-.App__SideMeny_Item{
-  border: #52C4B9;
-}
+
 .App__InfoContainer{
   margin-left: 10px;
   margin-right: 10px;
@@ -103,11 +152,12 @@ select:-webkit-autofill:focus {
 
 .App__Form {
   position: absolute;
-  left: 20%;
+  left: 10%;
   width: 80%;
   background-color: #2E4158;
 
 }
+
 
 .PageSwitch {
   display: flex;
@@ -190,7 +240,40 @@ select:-webkit-autofill:focus {
   font-size: .7em;
   color: rgb(255, 60, 60);
 }
-
+.logo {
+  height: 150px;
+  width: 150px;
+  background-color: #BDBDBD;
+}
+.InfoModal_Title {
+  color: #4F4F4F;
+  font-family: Gotham;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+}
+.InfoModal_Header {
+  color: #4F4F4F;
+  font-family: Gotham;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 22px;
+  text-align: center;
+}
+.InfoModal_QRCode{
+  height: 100px;
+  width: 100px;
+}
+.InfoModal_Link{
+  height: 15px;
+  width: 162px;
+  color: #000;
+  font-family: "Gotham Light";
+  font-size: 14px;
+  line-height: 15px;
+  text-align: center;
+  border-bottom: 1px solid #199087;
+}
 
 .App_MainTag{
   height: 35px;
@@ -201,11 +284,10 @@ select:-webkit-autofill:focus {
   font-weight: 700;
   line-height: 40px;
   text-align: center;
-  margin-bottom: 30px;
 }
 
 .FormField__Input {
-  width: 60%;
+  width: 400px;
   background-color: transparent;
   border: none;
   color: white;
@@ -235,6 +317,10 @@ select:-webkit-autofill:focus {
   font-weight: 300;
   line-height: 0;
   text-align: center;
+  cursor: pointer;
+}
+.FormField__Button--NoMargin{
+  margin-top: 0px;
 }
 
 .FormField__Button--Active{
